--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <title>Sistema de mensajeria</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
     
     <link rel="icon" href="https://i.ibb.co/444rMnh/hand.png" type="image/png">
 
